KAA-410: Improve css stylesheets hierarchy